src/negative_test_cases/Testcases/incorrect_no_operands_unary_op.stl
void main(){

boolean a ;
int  b ;

boolean c = b  NOT a;


}
